knowledge_base/knowledge/v12/capl/structured/IP/_OnAREthMethodResponse_.md
# <OnAREthMethodResponse>

> Category: `IP` | Type: `function`

## Syntax

```c
void <OnAREthMethodResponse>(dword methodCallHandle, dword messageResponseHandle );
```

## Description

A callback function with this signature must be passed to the CAPL function AREthCreateMethodCall.

## Return Values

—

## Example

In this example, it is assumed that the created method is contained in the FIBEX database that is assigned to the CANoe configuration. The method has the Method ID 31, two input parameters (Member_value1 and Member_value2), and a return parameter (Result).

```c
variables
{
  dword gMc; // global method call handle
}

void Initialize()
{
  dword aep; // application endpoint handle
  dword csi; // consumed Service Instance handle

  // open application endpoint
  aep = AREthOpenLocalApplicationEndpoint(0x11, 50002);

  // cretae Service Instance
  csi = AREthCreateConsumedServiceInstance(aep,11,1);

  // create method call
  gMc = AREthCreateMethodCall(csi,31,"OnMethodResponse");
}

on key 's'
{
  // if this key is pressed the method should be called

  // set the two input parameters of the method
  AREthSetValueDWord(gMc,"Member_value1",11);
  AREthSetValueDWord(gMc,"Member_value2",22);

  // call the method
  AREthCallMethod(gMc);
}

void OnMethodResponse(dword methodCallHandle, dword messageResponseHandle )
{
  dword res; // value of return parameter

  // get the returned parameter values
  res = AREthGetValueDWord(messageResponseHandle,"Result");

  write("The method call returned value: %d",res);
}
```

## Availability

| Since Version |
|---|
